--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: web_scraper
-description: A simple web scraper to scrape HTML tags and their attributes to cast them into Lists and Maps for dart and flutter.
+description: A simple web scraper to scrape HTML tags and their attributes to
+  cast them into Lists and Maps for dart and flutter.
 version: 0.1.4
 homepage: https://github.com/tusharojha/web_scraper
 
@@ -7,9 +8,10 @@ environment:
   sdk: '>=2.12.0-259.12.beta <3.0.0'
 
 dependencies:
+  dio: ^4.0.0
   html: ^0.15.0
   http: ^0.13.0
 
 dev_dependencies:
-  test: ^1.16.4
   pedantic: ^1.10.0
+  test: ^1.16.4
